# pdinfo

./: README.md  examples.ipynb  info.xlsx  pdinfo.py  pyproject.toml  requirements.txt  setup.py
src/: pdinfo.py  utils.py
