[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdinfo"
version = "0.0.1"
description = "Extended Pandas Analysis"
readme = "README.md"
authors = [{ name = "Motti Bazar", email = "mottibz@doxafe.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["pandas", "analysis", "outliers", "excel"]
dependencies = ["numpy", "pandas", "matplotlib", "seaborn", "openpyxl", 'tomli; python_version < "3.11"']
requires-python = ">=3.7"

[project.optional-dependencies]
    build = ["build", "twine"]
    #dev   = ["black", "bumpver", "isort", "mypy", "pytest"]

[project.urls]
    repository    = "https://github.com/mottibz/pdinfo"
